<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context="com.packcheng.layout.LayoutFragment">

        <com.packcheng.layout.widget.WaterFlowLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="@dimen/dp_500"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/layout_app_name"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/layout_text_test1"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="@dimen/dp_400"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/layout_text_test2"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="@dimen/dp_500"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/layout_text_test3"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:padding="@dimen/dp_10"
                android:text="@string/layout_text_test4"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/layout_text_test5"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/layout_text_test6"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="@dimen/dp_290"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/layout_text_test7"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/layout_text_test8"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/layout_text_test9"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="@dimen/dp_300"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/layout_text_test10"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15" />
        </com.packcheng.layout.widget.WaterFlowLayout>
    </LinearLayout>
</layout>